--- a/UAT/KPI-Dashboard/Kpi-Reporting-App/templates/allocationMapPage/expandTestCaseButtons.html
+++ b/UAT/KPI-Dashboard/Kpi-Reporting-App/templates/allocationMapPage/expandTestCaseButtons.html
@@ -1,2 +1,2 @@
-<button ng-if="!testCase.expanded" ng-click="expandTestCase(testCase)">&#10133;</button>
-<button ng-if="testCase.expanded" ng-click="collapseTestCase(testCase)">&#10134;</button>
+<button class="test-case-button-small" ng-if="!testCase.expanded" ng-click="expandTestCase(testCase)">&#10133;</button>
+<button class="test-case-button-small" ng-if="testCase.expanded" ng-click="collapseTestCase(testCase)">&#10134;</button>
