--- a/UAT/KPI-Dashboard/Kpi-Reporting-App/templates/daysAllocationPage/projectDaysList.html
+++ b/UAT/KPI-Dashboard/Kpi-Reporting-App/templates/daysAllocationPage/projectDaysList.html
@@ -12,12 +12,12 @@
         <span ng-if="day.period <= 1"><span class="bold bigger">{{day.dayDate}}</span></span>
         <span ng-if="day.period > 1">
             <span ng-if="!day.availableDates || day.availableDates.length == 0">
-                <button class="separated button-medium" ng-click="getAvailableDays(day)">&#9776;</button>
+                <button class="test-case-button-big" ng-click="getAvailableDays(day)">&#9776;</button>
                 <span class="separated bold bigger">{{day.dayDate}}</span>
             </span>
             <span ng-if="day.availableDates.length > 0">
-                <button class="button-medium" ng-click="day.availableDates.length = 0">&#x2718;</button>
-                <button class="separated button-medium" ng-if="day.dateToChange" ng-click="changeDayDate(day)">&#x2714;</button>
+                <button class="test-case-button-big" ng-click="day.availableDates.length = 0">&#x2718;</button>
+                <button class="test-case-button-big font-green" ng-if="day.dateToChange" ng-click="changeDayDate(day)">&#x2714;</button>
                 <select class="separated bold"
                         ng-options="date for date in day.availableDates"
                         ng-model="day.dateToChange" required></select>
@@ -25,19 +25,19 @@
         </span>
 
         <!-- Period 1 -->
-        <span ng-if="day.period == 1"> Executed: {{day.executed}}, Expected:
+        <span ng-if="day.period == 1"> Executed {{day.executed}}, Expected
             <span class="bold bigger" ng-if="day.blocked == 0">{{day.expected}}</span>
             <span class="bold bigger" ng-if="day.blocked > 0">{{day.expected}} - {{day.blocked}} (blocked) = {{day.expected - day.blocked}}</span>
         </span>
 
         <!-- Period 2 -->
         <span ng-if="day.period == 2">
-            <span>Allocated: <span class="bold bigger">{{day.allocated}}</span>,</span>
+            <span>Allocated <span class="bold bigger">{{day.allocated}}</span>,</span>
             <span>Executed <span class="bold bigger">{{day.executed}}</span>,</span>
             <span>Passed <span class="bold bigger">{{day.passed}}</span>,</span>
-            <span>Non-Final: <span class="bold bigger">{{day.nonFinal}}</span>,</span>
+            <span>Non-Final <span class="bold bigger">{{day.nonFinal}}</span>,</span>
             <span>
-                Expected:
+                <span>Expected</span>
                 <span class="bold bigger" ng-if="day.blocked == 0">{{day.expected}}</span>
                 <span ng-if="day.blocked > 0">{{day.expected}} - {{day.blocked}} (blocked) =
                     <span class="bold bigger">{{day.expected - day.blocked}}</span>
@@ -47,12 +47,13 @@
 
         <!-- Period 3 -->
         <span ng-if="day.period == 3">
-            <span>Allocated: <span class="bold bigger">{{day.allocated}}</span>, </span>
-            <span>Expected: <span class="bold bigger">{{day.expected}}</span></span>
+            <span>Allocated <span class="bold bigger">{{day.allocated}}</span>, </span>
+            <span>Expected <span class="bold bigger">{{day.expected}}</span></span>
         </span>
 
         <!-- Alerts -->
-        <span style="{{daysData.alerts[day.dayId]}}" ng-if="daysData.alerts[day.dayId]">&#9888;</span>
+        <span ng-class="{'alert-orange': daysData.alerts[day.dayId] == 1,'alert-green': daysData.alerts[day.dayId] == 2}"
+              ng-if="daysData.alerts[day.dayId]">&#9888;</span>
         <span ng-if="day.extension">Extension ( {{day.extension}} )</span>
         <span ng-if="day.reset">Configuration Reset ( {{day.reset}} )</span>
         <p class="bold" ng-if="day.park">Stopped for {{day.park}}</p>
