--- a/UAT/KPI-Dashboard/Kpi-Reporting-App/templates/userHeader.html
+++ b/UAT/KPI-Dashboard/Kpi-Reporting-App/templates/userHeader.html
@@ -1,5 +1,5 @@
 <nav>
-    <div class="app-header-menu-message"><span>Hello, <span class="bold">{{data.user.displayName}}</span></span></div>
+    <div class="app-header-menu-message"><span class="bold">{{data.user.displayName}}</span></div>
     <div class="app-header-menu-buttons">
         <a class="button-medium"
            ng-if="data.project.id"
