--- a/UAT/KPI-Dashboard/Kpi-Reporting-App/css/general.css
+++ b/UAT/KPI-Dashboard/Kpi-Reporting-App/css/general.css
@@ -1,4 +1,3 @@
-/* buttons */
 .button-big, .button-medium, .button-small {
     border: none;
     border-radius: 1rem/1rem;
@@ -9,7 +8,7 @@
 }
 
 .button-big {
-    padding: .3rem .6rem;
+    padding: .4rem .6rem;
     font-size: .8rem;
 }
 
@@ -24,8 +23,31 @@
 }
 
 .button-big:hover, .button-medium:hover, .button-small:hover {
-    text-shadow: 0 0 3px #000;
+    text-shadow: 2px 2px 1px #444;
     cursor: pointer;
+}
+
+.test-case-button-small, .test-case-button-big {
+    border: none;
+    border-radius: 1rem/1rem;
+    background: none;
+    color: #ED1C24;
+    font-weight: bold;
+    transition: .3s text;
+}
+
+.test-case-button-small {
+    padding: .1rem .3rem;
+    font-size: .5rem;
+}
+
+.test-case-button-big {
+    padding: .2rem .4rem;
+    font-size: .8rem;
+}
+
+.test-case-button-big:hover, .test-case-button-small:hover {
+    text-shadow: 1px 1px 1px #444;
 }
 
 .disabled {
@@ -38,13 +60,16 @@
     cursor: default;
 }
 
-/* bold font */
 .bold {
     font-weight: bold;
 }
 
 .bigger {
     font-size: .9rem;
+}
+
+.font-green {
+    color: #458B00;
 }
 
 .font-grey {
