--- a/UAT/KPI-Dashboard/Kpi-Reporting-App/templates/allocationMapPage/dateChange.html
+++ b/UAT/KPI-Dashboard/Kpi-Reporting-App/templates/allocationMapPage/dateChange.html
@@ -1,16 +1,17 @@
 <div ng-if="!mapData.daysChanges[testCase.testCaseId]">
     <span>{{testCase.dayPreview}}</span>
-    <button ng-if="testCase.canEdit == 1 && testCase.isFinal == 0 && testCase.externalStatus == 2 && mapData.unallocated <= 0"
+    <button class="test-case-button-big"
+            ng-if="testCase.canEdit == 1 && testCase.isFinal == 0 && testCase.externalStatus == 2 && mapData.unallocated <= 0"
             ng-click="prepareDaysForAllocated(testCase.testCaseId, testCase.dayIndex)">&#9776;</button>
-    <button ng-if="testCase.externalStatus == 1 && mapData.unallocated > 0"
+    <button class="test-case-button-big" ng-if="testCase.externalStatus == 1 && mapData.unallocated > 0"
             ng-click="prepareDaysForUnallocated(testCase.testCaseId)">&#9776;</button>
 </div>
 
 <div ng-if="mapData.daysChanges[testCase.testCaseId]">
     <select ng-options="day.dayPreview for day in mapData.remainingDays track by day.dayId"
             ng-model="mapData.daysChanges[testCase.testCaseId]"></select>
-    <div>
-        <button ng-click="mapData.daysChanges[testCase.testCaseId] = false">&#x2718;</button>
-        <button ng-click="changeTestCaseDate(testCase)">&#x2714;</button>
-    </div>
+    <span>
+        <button class="test-case-button-big" ng-click="mapData.daysChanges[testCase.testCaseId] = false">&#x2718;</button>
+        <button class="test-case-button-big font-green" ng-click="changeTestCaseDate(testCase)">&#x2714;</button>
+    </span>
 </div>
