--- a/UAT/KPI-Dashboard/Kpi-Reporting-App/templates/allocationMapPage/statusChange.html
+++ b/UAT/KPI-Dashboard/Kpi-Reporting-App/templates/allocationMapPage/statusChange.html
@@ -4,15 +4,15 @@
 
 <div ng-if="!mapData.statusChanges[testCase.testCaseId] && testCase.isFinal != 1">
     <span>{{testCase.statusName}}</span>
-    <button ng-if="testCase.canEdit == 1 && mapData.unallocated <= 0"
+    <button class="test-case-button-big" ng-if="testCase.canEdit == 1 && mapData.unallocated <= 0"
             ng-click="prepareStatuses(testCase.testCaseId, testCase.statusId)">&#9776;</button>
 </div>
 
 <div ng-if="mapData.statusChanges[testCase.testCaseId]">
     <select ng-options="status.name for status in mapData.statuses track by status.id"
             ng-model="mapData.statusChanges[testCase.testCaseId]"></select>
-    <div>
-        <button ng-click="mapData.statusChanges[testCase.testCaseId] = false">&#x2718;</button>
-        <button ng-click="changeTestCaseStatus(testCase)">&#x2714;</button>
-    </div>
+    <span>
+        <button class="test-case-button-big" ng-click="mapData.statusChanges[testCase.testCaseId] = false">&#x2718;</button>
+        <button class="test-case-button-big font-green" ng-click="changeTestCaseStatus(testCase)">&#x2714;</button>
+    </span>
 </div>
