--- a/UAT/KPI-Dashboard/Kpi-Reporting-App/css/general.css
+++ b/UAT/KPI-Dashboard/Kpi-Reporting-App/css/general.css
@@ -1,4 +1,3 @@
-/* buttons */
 .button-big, .button-medium, .button-small {
     border: none;
     border-radius: 1rem/1rem;
@@ -9,7 +8,7 @@
 }
 
 .button-big {
-    padding: .3rem .6rem;
+    padding: .4rem .6rem;
     font-size: .8rem;
 }
 
@@ -23,9 +22,31 @@
     font-size: .6rem;
 }
 
-.button-big:hover, .button-medium:hover, .button-small:hover {
-    text-shadow: 0 0 3px #000;
-    cursor: pointer;
+.button-big:hover, .button-medium:hover, .button-small:hover, .button-big:active, .button-medium:active, .button-small:active {
+    text-shadow: 2px 2px 1px #444;
+    outline: 0;
+}
+
+.test-case-button-small, .test-case-button-big {
+    border: none;
+    border-radius: 1rem/1rem;
+    background: none;
+    color: #ED1C24;
+    font-weight: bold;
+    transition: .3s text;
+}
+
+.test-case-button-small {
+    font-size: .5rem;
+}
+
+.test-case-button-big {
+    font-size: .8rem;
+}
+
+.test-case-button-big:hover, .test-case-button-small:hover, .test-case-button-big:active, .test-case-button-small:active {
+    text-shadow: 1px 1px 1px #444;
+    outline: 0;
 }
 
 .disabled {
@@ -38,13 +59,20 @@
     cursor: default;
 }
 
-/* bold font */
 .bold {
     font-weight: bold;
 }
 
 .bigger {
     font-size: .9rem;
+}
+
+.font-green {
+    color: #458B00;
+}
+
+.font-red {
+    color: #ED1C24;
 }
 
 .font-grey {
