--- a/UAT/KPI-Dashboard/Kpi-Reporting-App/templates/loginPage.html
+++ b/UAT/KPI-Dashboard/Kpi-Reporting-App/templates/loginPage.html
@@ -1,6 +1,6 @@
-<form>
-    <h3>Login</h3>
-    <input ng-model="user.username" type="text" placeholder="Username">
-    <input ng-model="user.password" type="password" placeholder="Password">
-    <button ng-click="login(user)">Login</button>
+<form class="login-form">
+    <h2 class="login-form-title">Please login to continue!</h2>
+    <input class="login-form-username" ng-model="user.username" type="text" placeholder="Username">
+    <input class="login-form-password" ng-model="user.password" type="password" placeholder="Password">
+    <button class="button-big bold login-form-button" ng-click="login(user)">Login</button>
 </form>
